src/model/reading/mipsgrammarParser.java
package model.reading;

// Generated from mipsgrammar.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mipsgrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		REGISTER=1, INT=2, ADD=3, ADDI=4, ADDIU=5, ADDU=6, AND=7, ANDI=8, BEQ=9, 
		BGEZ=10, BGTZ=11, BLEZ=12, BLTZ=13, BNE=14, BREAK=15, CLO=16, CLZ=17, 
		DIV=18, DIVU=19, J=20, JAL=21, JALR=22, JR=23, LB=24, LBU=25, LH=26, LHU=27, 
		LW=28, MOVN=29, MOVZ=30, MUL=31, MULT=32, NOP=33, NOR=34, OR=35, SB=36, 
		SUB=37, SUBU=38, SW=39, SYSCALL=40, XOR=41, XORI=42, ORI=43, SEP=44, SPACE=45, 
		COMMA=46, LABEL=47, WS=48, LPAREN=49, RPAREN=50;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_command = 2, RULE_add = 3, RULE_addi = 4, 
		RULE_addiu = 5, RULE_addu = 6, RULE_and = 7, RULE_andi = 8, RULE_beq = 9, 
		RULE_bgez = 10, RULE_bgtz = 11, RULE_blez = 12, RULE_bltz = 13, RULE_bne = 14, 
		RULE_break_ = 15, RULE_clo = 16, RULE_clz = 17, RULE_div = 18, RULE_divu = 19, 
		RULE_j = 20, RULE_jal = 21, RULE_jalr = 22, RULE_jr = 23, RULE_lb = 24, 
		RULE_lbu = 25, RULE_lh = 26, RULE_lhu = 27, RULE_lw = 28, RULE_movn = 29, 
		RULE_movz = 30, RULE_mul = 31, RULE_mult = 32, RULE_nop = 33, RULE_nor = 34, 
		RULE_or = 35, RULE_sb = 36, RULE_sub = 37, RULE_subu = 38, RULE_sw = 39, 
		RULE_syscall = 40, RULE_xor = 41, RULE_xori = 42, RULE_ori = 43;
	public static final String[] ruleNames = {
		"program", "line", "command", "add", "addi", "addiu", "addu", "and", "andi", 
		"beq", "bgez", "bgtz", "blez", "bltz", "bne", "break_", "clo", "clz", 
		"div", "divu", "j", "jal", "jalr", "jr", "lb", "lbu", "lh", "lhu", "lw", 
		"movn", "movz", "mul", "mult", "nop", "nor", "or", "sb", "sub", "subu", 
		"sw", "syscall", "xor", "xori", "ori"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'add'", "'addi'", "'addiu'", "'addu'", "'and'", "'andi'", 
		"'beq'", "'bgez'", "'bgtz'", "'blez'", "'bltz'", "'bne'", "'break'", "'clo'", 
		"'clz'", "'div'", "'divu'", "'j'", "'jal'", "'jalr'", "'jr'", "'lb'", 
		"'lbu'", "'lh'", "'lhu'", "'lw'", "'movn'", "'movz'", "'mul'", "'mult'", 
		"'nop'", "'nor'", "'or'", "'sb'", "'sub'", "'subu'", "'sw'", "'syscall'", 
		"'xor'", "'xori'", "'ori'", null, "' '", "','", null, null, "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "REGISTER", "INT", "ADD", "ADDI", "ADDIU", "ADDU", "AND", "ANDI", 
		"BEQ", "BGEZ", "BGTZ", "BLEZ", "BLTZ", "BNE", "BREAK", "CLO", "CLZ", "DIV", 
		"DIVU", "J", "JAL", "JALR", "JR", "LB", "LBU", "LH", "LHU", "LW", "MOVN", 
		"MOVZ", "MUL", "MULT", "NOP", "NOR", "OR", "SB", "SUB", "SUBU", "SW", 
		"SYSCALL", "XOR", "XORI", "ORI", "SEP", "SPACE", "COMMA", "LABEL", "WS", 
		"LPAREN", "RPAREN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mipsgrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mipsgrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(88);
				command();
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << ADDI) | (1L << ADDIU) | (1L << ADDU) | (1L << AND) | (1L << ANDI) | (1L << BEQ) | (1L << BGEZ) | (1L << BGTZ) | (1L << BLEZ) | (1L << BLTZ) | (1L << BNE) | (1L << BREAK) | (1L << CLO) | (1L << CLZ) | (1L << DIV) | (1L << DIVU) | (1L << J) | (1L << JAL) | (1L << JALR) | (1L << JR) | (1L << LB) | (1L << LBU) | (1L << LH) | (1L << LHU) | (1L << LW) | (1L << MOVN) | (1L << MOVZ) | (1L << MUL) | (1L << MULT) | (1L << NOP) | (1L << NOR) | (1L << OR) | (1L << SB) | (1L << SUB) | (1L << SUBU) | (1L << SW) | (1L << SYSCALL) | (1L << XOR) | (1L << XORI) | (1L << ORI))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			command();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public AddiContext addi() {
			return getRuleContext(AddiContext.class,0);
		}
		public AddiuContext addiu() {
			return getRuleContext(AddiuContext.class,0);
		}
		public AdduContext addu() {
			return getRuleContext(AdduContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public AndiContext andi() {
			return getRuleContext(AndiContext.class,0);
		}
		public BeqContext beq() {
			return getRuleContext(BeqContext.class,0);
		}
		public BgezContext bgez() {
			return getRuleContext(BgezContext.class,0);
		}
		public BgtzContext bgtz() {
			return getRuleContext(BgtzContext.class,0);
		}
		public BlezContext blez() {
			return getRuleContext(BlezContext.class,0);
		}
		public BltzContext bltz() {
			return getRuleContext(BltzContext.class,0);
		}
		public BneContext bne() {
			return getRuleContext(BneContext.class,0);
		}
		public Break_Context break_() {
			return getRuleContext(Break_Context.class,0);
		}
		public CloContext clo() {
			return getRuleContext(CloContext.class,0);
		}
		public ClzContext clz() {
			return getRuleContext(ClzContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public DivuContext divu() {
			return getRuleContext(DivuContext.class,0);
		}
		public JContext j() {
			return getRuleContext(JContext.class,0);
		}
		public JalContext jal() {
			return getRuleContext(JalContext.class,0);
		}
		public JalrContext jalr() {
			return getRuleContext(JalrContext.class,0);
		}
		public JrContext jr() {
			return getRuleContext(JrContext.class,0);
		}
		public LbContext lb() {
			return getRuleContext(LbContext.class,0);
		}
		public LbuContext lbu() {
			return getRuleContext(LbuContext.class,0);
		}
		public LhContext lh() {
			return getRuleContext(LhContext.class,0);
		}
		public LhuContext lhu() {
			return getRuleContext(LhuContext.class,0);
		}
		public LwContext lw() {
			return getRuleContext(LwContext.class,0);
		}
		public MovnContext movn() {
			return getRuleContext(MovnContext.class,0);
		}
		public MovzContext movz() {
			return getRuleContext(MovzContext.class,0);
		}
		public MulContext mul() {
			return getRuleContext(MulContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public NopContext nop() {
			return getRuleContext(NopContext.class,0);
		}
		public NorContext nor() {
			return getRuleContext(NorContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public SbContext sb() {
			return getRuleContext(SbContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public SubuContext subu() {
			return getRuleContext(SubuContext.class,0);
		}
		public SwContext sw() {
			return getRuleContext(SwContext.class,0);
		}
		public SyscallContext syscall() {
			return getRuleContext(SyscallContext.class,0);
		}
		public XorContext xor() {
			return getRuleContext(XorContext.class,0);
		}
		public XoriContext xori() {
			return getRuleContext(XoriContext.class,0);
		}
		public OriContext ori() {
			return getRuleContext(OriContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
				{
				setState(95);
				add();
				}
				break;
			case ADDI:
				{
				setState(96);
				addi();
				}
				break;
			case ADDIU:
				{
				setState(97);
				addiu();
				}
				break;
			case ADDU:
				{
				setState(98);
				addu();
				}
				break;
			case AND:
				{
				setState(99);
				and();
				}
				break;
			case ANDI:
				{
				setState(100);
				andi();
				}
				break;
			case BEQ:
				{
				setState(101);
				beq();
				}
				break;
			case BGEZ:
				{
				setState(102);
				bgez();
				}
				break;
			case BGTZ:
				{
				setState(103);
				bgtz();
				}
				break;
			case BLEZ:
				{
				setState(104);
				blez();
				}
				break;
			case BLTZ:
				{
				setState(105);
				bltz();
				}
				break;
			case BNE:
				{
				setState(106);
				bne();
				}
				break;
			case BREAK:
				{
				setState(107);
				break_();
				}
				break;
			case CLO:
				{
				setState(108);
				clo();
				}
				break;
			case CLZ:
				{
				setState(109);
				clz();
				}
				break;
			case DIV:
				{
				setState(110);
				div();
				}
				break;
			case DIVU:
				{
				setState(111);
				divu();
				}
				break;
			case J:
				{
				setState(112);
				j();
				}
				break;
			case JAL:
				{
				setState(113);
				jal();
				}
				break;
			case JALR:
				{
				setState(114);
				jalr();
				}
				break;
			case JR:
				{
				setState(115);
				jr();
				}
				break;
			case LB:
				{
				setState(116);
				lb();
				}
				break;
			case LBU:
				{
				setState(117);
				lbu();
				}
				break;
			case LH:
				{
				setState(118);
				lh();
				}
				break;
			case LHU:
				{
				setState(119);
				lhu();
				}
				break;
			case LW:
				{
				setState(120);
				lw();
				}
				break;
			case MOVN:
				{
				setState(121);
				movn();
				}
				break;
			case MOVZ:
				{
				setState(122);
				movz();
				}
				break;
			case MUL:
				{
				setState(123);
				mul();
				}
				break;
			case MULT:
				{
				setState(124);
				mult();
				}
				break;
			case NOP:
				{
				setState(125);
				nop();
				}
				break;
			case NOR:
				{
				setState(126);
				nor();
				}
				break;
			case OR:
				{
				setState(127);
				or();
				}
				break;
			case SB:
				{
				setState(128);
				sb();
				}
				break;
			case SUB:
				{
				setState(129);
				sub();
				}
				break;
			case SUBU:
				{
				setState(130);
				subu();
				}
				break;
			case SW:
				{
				setState(131);
				sw();
				}
				break;
			case SYSCALL:
				{
				setState(132);
				syscall();
				}
				break;
			case XOR:
				{
				setState(133);
				xor();
				}
				break;
			case XORI:
				{
				setState(134);
				xori();
				}
				break;
			case ORI:
				{
				setState(135);
				ori();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(mipsgrammarParser.ADD, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitAdd(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(ADD);
			setState(139);
			match(REGISTER);
			setState(140);
			match(REGISTER);
			setState(141);
			match(REGISTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddiContext extends ParserRuleContext {
		public TerminalNode ADDI() { return getToken(mipsgrammarParser.ADDI, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public TerminalNode INT() { return getToken(mipsgrammarParser.INT, 0); }
		public AddiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterAddi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitAddi(this);
		}
	}

	public final AddiContext addi() throws RecognitionException {
		AddiContext _localctx = new AddiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_addi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(ADDI);
			setState(144);
			match(REGISTER);
			setState(145);
			match(REGISTER);
			setState(146);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddiuContext extends ParserRuleContext {
		public TerminalNode ADDIU() { return getToken(mipsgrammarParser.ADDIU, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public TerminalNode INT() { return getToken(mipsgrammarParser.INT, 0); }
		public AddiuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addiu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterAddiu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitAddiu(this);
		}
	}

	public final AddiuContext addiu() throws RecognitionException {
		AddiuContext _localctx = new AddiuContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_addiu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ADDIU);
			setState(149);
			match(REGISTER);
			setState(150);
			match(REGISTER);
			setState(151);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdduContext extends ParserRuleContext {
		public TerminalNode ADDU() { return getToken(mipsgrammarParser.ADDU, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public AdduContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterAddu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitAddu(this);
		}
	}

	public final AdduContext addu() throws RecognitionException {
		AdduContext _localctx = new AdduContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_addu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(ADDU);
			setState(154);
			match(REGISTER);
			setState(155);
			match(REGISTER);
			setState(156);
			match(REGISTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(mipsgrammarParser.AND, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitAnd(this);
		}
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_and);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(AND);
			setState(159);
			match(REGISTER);
			setState(160);
			match(REGISTER);
			setState(161);
			match(REGISTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndiContext extends ParserRuleContext {
		public TerminalNode ANDI() { return getToken(mipsgrammarParser.ANDI, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public TerminalNode INT() { return getToken(mipsgrammarParser.INT, 0); }
		public AndiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterAndi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitAndi(this);
		}
	}

	public final AndiContext andi() throws RecognitionException {
		AndiContext _localctx = new AndiContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_andi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(ANDI);
			setState(164);
			match(REGISTER);
			setState(165);
			match(REGISTER);
			setState(166);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeqContext extends ParserRuleContext {
		public TerminalNode BEQ() { return getToken(mipsgrammarParser.BEQ, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(mipsgrammarParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(mipsgrammarParser.REGISTER, i);
		}
		public TerminalNode LABEL() { return getToken(mipsgrammarParser.LABEL, 0); }
		public BeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterBeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitBeq(this);
		}
	}

	public final BeqContext beq() throws RecognitionException {
		BeqContext _localctx = new BeqContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_beq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(BEQ);
			setState(169);
			match(REGISTER);
			setState(170);
			match(REGISTER);
			setState(171);
			match(LABEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BgezContext extends ParserRuleContext {
		public TerminalNode BGEZ() { return getToken(mipsgrammarParser.BGEZ, 0); }
		public TerminalNode REGISTER() { return getToken(mipsgrammarParser.REGISTER, 0); }
		public TerminalNode LABEL() { return getToken(mipsgrammarParser.LABEL, 0); }
		public BgezContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bgez; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterBgez(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitBgez(this);
		}
	}

	public final BgezContext bgez() throws RecognitionException {
		BgezContext _localctx = new BgezContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_bgez);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(BGEZ);
			setState(174);
			match(REGISTER);
			setState(175);
			match(LABEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BgtzContext extends ParserRuleContext {
		public TerminalNode BGTZ() { return getToken(mipsgrammarParser.BGTZ, 0); }
		public TerminalNode REGISTER() { return getToken(mipsgrammarParser.REGISTER, 0); }
		public TerminalNode LABEL() { return getToken(mipsgrammarParser.LABEL, 0); }
		public BgtzContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bgtz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).enterBgtz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mipsgrammarListener ) ((mipsgrammarListener)listener).exitBgtz(this);
		}
	}

	public final BgtzContext bgtz() throws RecognitionException {
		BgtzContext _localctx = new BgtzContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bgtz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(BGTZ);
			setState(178);
			match(REGISTER);
			setState(179);
			match(LABEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
